<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_margin="10dp"
        android:id="@+id/item_container_bg"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        app:cardBackgroundColor="@color/greenBack"
        app:cardCornerRadius="31dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <ImageView
                    android:id="@+id/img_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:adjustViewBounds="true"
                    android:maxWidth="65dp"
                    android:maxHeight="65dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/megaimg"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/txt_img"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/megaNome"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="44sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <EditText
                android:id="@+id/txt_aposta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="50dp"
                android:backgroundTint="@color/white"
                android:hint="@string/InfoNumberMega"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:id="@+id/item_mini_card"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/green500"
                app:cardCornerRadius="8dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/LastBet"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/numeros_sorteados"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    tools:text="50 | 23 | 12 | 25 | 59 | 6"

                    />
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btn_colors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/green500"
                android:text="@string/Button"
                android:textStyle="italic" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>