<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="225dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/greenBack"
            app:cardCornerRadius="31dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="67dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="12dp"
                        android:adjustViewBounds="true"
                        android:maxWidth="65dp"
                        android:maxHeight="65dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/megaimg"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_marginLeft="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/megaNome"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="44sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <EditText
                    android:id="@+id/megaEditTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="50dp"
                    android:backgroundTint="@color/white"
                    android:inputType="number"
                    android:hint="@string/InfoNumberMega"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/green500"
                    app:cardCornerRadius="8dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/LastBet"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/megaNumbers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        tools:text="50 | 23 | 12 | 25 | 59 | 6"

                        />
                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/megaBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/green500"
                    android:text="@string/Button"
                    android:textStyle="italic" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!--        Lotofacil-->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="225dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/pink300"
            app:cardCornerRadius="31dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="67dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="12dp"
                        android:adjustViewBounds="true"
                        android:maxWidth="65dp"
                        android:maxHeight="65dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/lotoimg"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_marginLeft="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/Lotofacil"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="44sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <EditText
                    android:id="@+id/lotoEditTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="45dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="45dp"
                    android:backgroundTint="@color/white"
                    android:inputType="number"
                    android:hint="@string/lotoDigite"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/pink500"
                    app:cardCornerRadius="8dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/LastBet"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/lotoNumbers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        tools:text="50 | 23 | 12 | 25 | 59 | 6"

                        />
                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/lotoBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/pink500"
                    android:text="@string/Button"
                    android:textStyle="italic" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!--        Quina-->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="225dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/purple300"
            app:cardCornerRadius="31dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="67dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="12dp"
                        android:adjustViewBounds="true"
                        android:maxWidth="65dp"
                        android:maxHeight="65dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/quinaimg"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_marginLeft="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/Quina"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="44sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <EditText
                    android:id="@+id/quinaEditTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="50dp"
                    android:backgroundTint="@color/white"
                    android:inputType="textPersonName"
                    android:hint="@string/InfoNumberQuina"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/purple500"
                    app:cardCornerRadius="8dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/LastBet"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/quinaNumbers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        tools:text="50 | 23 | 12 | 25 | 59 | 6"

                        />
                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/quinaBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/purple500"
                    android:text="@string/Button"
                    android:textStyle="italic" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>